[gd_scene load_steps=6 format=3 uid="uid://b1i2ucce87pfy"]

[ext_resource type="Texture2D" uid="uid://t5txvxvchhc3" path="res://assets/art/lablevelbackground.png" id="1_p0wlc"]
[ext_resource type="Script" uid="uid://cpaigou1bkyxi" path="res://scripts/level_selector.gd" id="1_rif6e"]
[ext_resource type="Texture2D" uid="uid://cf5pas4ncoeg2" path="res://assets/art/selectalevel.png" id="2_2epne"]
[ext_resource type="Theme" uid="uid://bc463cnh1wi1g" path="res://themes/button_variant_1.tres" id="5_chg43"]
[ext_resource type="Theme" uid="uid://cbjgpekx1hw3m" path="res://themes/button_variant_3.tres" id="5_r77uv"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_rif6e")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1924.0
offset_bottom = 1082.0
scale = Vector2(0.668689, 0.668689)
texture = ExtResource("1_p0wlc")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
layout_mode = 0
offset_left = 122.0
offset_top = 168.0
offset_right = 1122.0
offset_bottom = 724.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScrollContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Level1Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_r77uv")
text = "Level 1: Tutorial"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button/Star1"]
position = Vector2(732, 63)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button/Star1"]
position = Vector2(732, 63)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button/Star2"]
position = Vector2(732, 63)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button/Star2"]
position = Vector2(732, 63)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button/Star3"]
position = Vector2(732, 63)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level1Button/Star3"]
position = Vector2(732, 63)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level2Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 2: Water Works"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level2Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level3Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 3: Fizzy Fix"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level3Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level4Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 4: Squeaky Clean"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level4Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level5Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 5: Bath Bubbles"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level5Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level6Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 6: Firework Formula"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level6Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level7Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 7: The Big Cheese"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level7Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level8Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 8: Soil Saver"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level8Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Level9Button" type="Button" parent="UI/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("5_r77uv")
disabled = true
text = "Level 9: Cookie Chemistry"
alignment = 0

[node name="Star1" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button"]

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button/Star1"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star2" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button"]
position = Vector2(100, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button/Star2"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Star3" type="Node2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button"]
position = Vector2(200, 0)

[node name="StarOutline" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.65, 0.65)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="StarMain" type="Polygon2D" parent="UI/ScrollContainer/VBoxContainer/Level9Button/Star3"]
position = Vector2(734, 65)
scale = Vector2(0.5, 0.5)
color = Color(0.721569, 0.721569, 0.721569, 1)
polygon = PackedVector2Array(0, -50, 14.43, -15.45, 47.55, -15.45, 23.51, 5.9, 29.39, 40.45, 0, 22, -29.39, 40.45, -23.51, 5.9, -47.55, -15.45, -14.43, -15.45)

[node name="Label" type="TextureRect" parent="UI"]
layout_mode = 0
offset_left = 243.0
offset_top = 24.0
offset_right = 3114.0
offset_bottom = 425.0
scale = Vector2(0.270848, 0.270397)
texture = ExtResource("2_2epne")

[node name="MenuButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 114.0
offset_bottom = 60.0
scale = Vector2(1.45109, 1.45109)
theme = ExtResource("5_chg43")
text = "Menu"

[connection signal="pressed" from="UI/MenuButton" to="." method="_on_menu_button_pressed"]
